Made the images on info section visible

--- a/index.html
+++ b/index.html
@@ -42,22 +42,22 @@
             </div>
         <div class="container">
             <div class="info">
-                <img src="/img/img.jpg" alt="">
+                <img src="img/img.jpg" alt="">
                 <div class="box-text">this is some subtext under an illustration or image.</div>
             </div>
 
             <div class="info">
-                <img src="/img/img.jpg" alt="">
+                <img src="img/img.jpg" alt="">
                 <div class="box-text">this is some subtext under an illustration or image.</div>
             </div>
 
             <div class="info">
-                <img src="/img/img.jpg" alt="">
+                <img src="img/img.jpg" alt="">
                 <div class="box-text">this is some subtext under an illustration or image.</div>
             </div>
 
             <div class="info">
-                <img src="/img/img.jpg" alt="">
+                <img src="img/img.jpg" alt="">
                 <div class="box-text">this is some subtext under an illustration or image.</div>
             </div>
         </div></div>
